--- a/a7287406aa744e5682116058cf3e98fe.opf/meta.yml
+++ b/a7287406aa744e5682116058cf3e98fe.opf/meta.yml
@@ -5,6 +5,6 @@ source_metadata:
     7b81a06cb00847019b9164c9a72fd0d0:
       base_file: v059.txt
       image_group_id: I1PD95905
-      title: ''
+      title: རིགས་པ་དྲུག་ཅུ་པའི་འགྲེལ་པ།
       total_pages: 1913
       volume_number: 60
